--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img src="./images/gnani.JPG" class="pro-img" alt="">
                     <p><span class="name">Gnanendra P</span><br><span class="role">Frontend Developer</span></p>
                 </div>
-                <div class="about hidden">
+                <div class="about hidden pa">
                     <h2 class="heading">About Me</h2>
                     <p class="ab-con">Motivated and detail-oriented front-end web developer with a 
                         passion for creating engaging and user-friendly web experiences.
@@ -75,7 +75,7 @@
                 </div>
             <!-- </div> -->
 
-            <div class="expr hidden">
+            <div class="expr hidden pa">
                     <h2 class="heading">Experience</h2> 
                     <div>
                         <h3 id="comp-hed">DigiLearn</h3>
@@ -88,7 +88,7 @@
                         </p>
                     </div>
             </div>
-            <div class="skills hidden">
+            <div class="skills hidden pa">
                 <h2 class="heading">Skills</h2> 
                 <div class="sklls-card">
                     <h4 class="skillhed">Frontend</h4>
@@ -98,7 +98,7 @@
                     <div class="skill-info" id="colo2">Bootstrap</div>
                 </div>
             </div>
-            <div class="cards hidden">
+            <div class="cards hidden pa">
                 <h2 class="heading">Projects</h2> 
                 <div class="card" style="width: 16rem;">
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="160" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image cap" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
             </div>
-            <div class="down hidden">
+            <div class="down hidden pa">
                 <h2 class="heading">Resume</h2>
                 <div class="download">
                     <h3 class="click">Click Download Option To Download Resume</h3>
