--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="preloader"></div>
 
     <div class="header">
-        <img src="./images/G.png" class="logo" alt="">
+        <img src="./images/G.png" class="logo">
         <button class="con-btn" >Contact Me <img src="./images/Contact me.png" class="con-icon" alt=""> </button>
         <div class="menuBtn">
             <input type="checkbox" id="check">
@@ -35,10 +35,11 @@
     <nav class="navContanier">
         <ul class="nav-bar2">
             <li class="opt-lk"><a href="#profile"><i class="fas fa-home"></i> Home</a></li>
-            <li class="opt-lk"><a href="#adout"><i class="fas fa-user"></i> About Me</a></li>
+            <li class="opt-lk"><a href="#adout"><i class="fas fa-user"></i> About Me</a></li>   
+            <li class="opt-lk"><a href="#skills"><i class="fas fa-wrench"></i> Skills</a></li>
             <li class="opt-lk"><a href="#project"><i class="fas fa-folder"></i> Project</a></li>
             <li class="opt-lk"><a href="#resume"><i class="fas fa-download"></i> Resume</a></li> 
-            <li class="opt-lk"><a href="#contactMe"><i class="fas fa-user"></i> Contact Me</a></li> 
+            <li class="opt-lk"><a href="#contactMe"><i class="fas fa-phone"></i> Contact Me</a></li> 
         </ul> 
     </nav>
     <div class="flex">
@@ -48,9 +49,10 @@
                     <ul class="nav-bar">
                         <li class="opt-lk"><a href="#profile"><i class="fas fa-home"></i> Home</a></li>
                         <li class="opt-lk"><a href="#adout"><i class="fas fa-user"></i> About Me</a></li>
+                        <li class="opt-lk"><a href="#skills"><i class="fas fa-wrench"></i> Skills</a></li>
                         <li class="opt-lk"><a href="#project"><i class="fas fa-folder"></i> Project</a></li>
                         <li class="opt-lk"><a href="#resume"><i class="fas fa-download"></i> Resume</a></li> 
-                        <li class="opt-lk"><a href="#contactMe"><i class="fas fa-user"></i> Contact Me</a></li>   
+                        <li class="opt-lk"><a href="#contactMe"><i class="fas fa-phone"></i> Contact Me</a></li>   
                     </ul> 
                     <h2 class="Socl">Social</h2>
                     <ul class="nav-bar">
@@ -63,7 +65,7 @@
         </aside>
         <div class="right-flex ">
             <!-- <div class="about"> -->
-                <div class="profile" id="profile">
+                <div class="profile w3" id="profile" >
                     <img src="./images/gnani.JPG" class="pro-img" alt="">
                     <p><span class="name">Gnanendra P</span><br><span class="role">Frontend Developer</span></p>
                 </div>
@@ -83,10 +85,9 @@
                         <h3 id="comp-hed">DigiLearn</h3>
                         <p>August-2023 to peresent</p>
                         <p> <b>Role:</b> Front-end Web Developer</p>
-                        <p class="ab-con">In that company I worked as the content developer for full 
-                            time and i want to reduce the on screen text, done some of the front-end 
-                            work which is createing the activity for Childern, the project that are worked on 
-                            are NEPL Centeral Government project.
+                        <p class="ab-con">
+                            Developing the interactive activity for the student for learning propose.
+                            Activity are developed using the HTML, CSS and JavaScript 
                         </p>
                     </div>
             </div>
