--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h2 class="heading">Resume</h2>
                 <div class="download">
                     <h3 class="click">Click Download Option To Download Resume</h3>
-                    <a href="your_file.pdf" download="filename.pdf" class="download-button">Download <i class="fas fa-download"></i></a>
+                    <a href="./assest/file/Resume.pdf" download="filename.pdf" class="download-button">Download <i class="fas fa-download"></i></a>
                 </div>
             </div>
             <div class="contactContainer" id="contactMe">
