--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
             <li class="opt-lk"><a href="#adout"><i class="fas fa-user"></i> About Me</a></li>   
             <li class="opt-lk"><a href="#skills"><i class="fas fa-wrench"></i> Skills</a></li>
             <li class="opt-lk"><a href="#project"><i class="fas fa-folder"></i> Project</a></li>
-            <li class="opt-lk"><a href="#resume"><i class="fas fa-download"></i> Resume</a></li> 
             <li class="opt-lk"><a href="#contactMe"><i class="fas fa-phone"></i> Contact Me</a></li> 
         </ul> 
     </nav>
@@ -50,8 +49,7 @@
                         <li class="opt-lk"><a href="#profile"><i class="fas fa-home"></i> Home</a></li>
                         <li class="opt-lk"><a href="#adout"><i class="fas fa-user"></i> About Me</a></li>
                         <li class="opt-lk"><a href="#skills"><i class="fas fa-wrench"></i> Skills</a></li>
-                        <li class="opt-lk"><a href="#project"><i class="fas fa-folder"></i> Project</a></li>
-                        <li class="opt-lk"><a href="#resume"><i class="fas fa-download"></i> Resume</a></li> 
+                        <li class="opt-lk"><a href="#project"><i class="fas fa-folder"></i> Project</a></li> 
                         <li class="opt-lk"><a href="#contactMe"><i class="fas fa-phone"></i> Contact Me</a></li>   
                     </ul> 
                     <h2 class="Socl">Social</h2>
@@ -110,6 +108,22 @@
                 
                 <div class="cardCont">
                     <div class="card" style="min-width: 16rem; max-width: 16rem;  background: transparent;">
+                        <img src="./images/Calculator.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Calculator</h5>
+                          <p class="card-text">These is a mini game build using the HTML, CSS and JavaScript</p>
+                          <a href="https://gnanendrapgnani.github.io/Calculator/" class="btn btn-primary">Preview</a>
+                        </div>
+                    </div>
+                    <div class="card" style="min-width: 16rem; max-width: 16rem;  background: transparent;">
+                        <img src="./images/snake.png">
+                        <div class="card-body">
+                          <h5 class="card-title">Snake Game</h5>
+                          <p class="card-text">These is a mini game build using the HTML, CSS and JavaScript</p>
+                          <a href="https://gnanendrapgnani.github.io/Snake-Game/" class="btn btn-primary">Preview</a>
+                        </div>
+                    </div>
+                    <div class="card" style="min-width: 16rem; max-width: 16rem;  background: transparent;">
                         <img src="./images/weicon.png" >
                         <div class="card-body">
                           <h5 class="card-title">Weather Application</h5>
@@ -127,14 +141,6 @@
                         </div>
                     </div>
 
-                    <div class="card" style="min-width: 16rem; max-width: 16rem;  background: transparent;">
-                        <img src="./images/Calculator.png">
-                        <div class="card-body">
-                          <h5 class="card-title">Calculator</h5>
-                          <p class="card-text">These is a mini game build using the HTML, CSS and JavaScript</p>
-                          <a href="https://gnanendrapgnani.github.io/Calculator/" class="btn btn-primary">Preview</a>
-                        </div>
-                    </div>
                 </div>
 
                 <!-- project cards end -->
@@ -142,13 +148,6 @@
 
 
             <!-- projects ends -->
-            <div class="down hidden pa" id="resume">
-                <h2 class="heading">Resume</h2>
-                <div class="download">
-                    <h3 class="click">Click Download Option To Download Resume</h3>
-                    <a href="./assest/file/Resume.pdf" download="filename.pdf" class="download-button">Download <i class="fas fa-download"></i></a>
-                </div>
-            </div>
             <div class="contactContainer" id="contactMe">
                 <div class="contact-me hidden">
                     <h1>Contact Me</h1>
